# PyLator

./: README.md  main.py  pyproject.toml
templates/: about.html  blank_input.html  blank_output.html  error.html  home.html  translation_error.html  translation_error1.html
