[tool.poetry]
name = "PyLator"
version = "0.1.5"
description = "PyLator is a free translating service created by CyberPy, also known as LeShuriken1, using Python and HTML, hosted on Replit, and translated by the translate module which uses MyMemory API"
authors = ["PyLator.Info@GMail.com", "LeShuriken1@GMail.com", "CyberPy01@GMail.com"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
translate = "^3.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
